<resources>
    <string name="app_name">ToDoList</string>
    <string name="add_task">Add Task</string>
    <string name="do_math_homework">Do math homework</string>
    <string name="description">Description</string>
    <string name="timer">Timer</string>
    <string name="tag">Tag</string>
    <string name="flag">Flag</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="choose_category">Choose Category</string>
    <string name="grocery">Grocery</string>
    <string name="work">Work</string>
    <string name="sport">Sport</string>
    <string name="design">Design</string>
    <string name="university">University</string>
    <string name="social">Social</string>
    <string name="music">Music</string>
    <string name="health">Health</string>
    <string name="movie">Movie</string>
    <string name="home">Home</string>
    <string name="edit">edit</string>
    <string name="default_web_client_id">
        793933586192-jrsbqgrdddebpideo4bt01vn6tec0ahj.apps.googleusercontent.com
    </string>
    <string name="Title">Title</string>
    <string name="Edit">Edit</string>
    <string name="priority_flag_icon">priority_flag_icon</string>

    <string-array name="spinner1_array">
        <item>Recent</item>
        <item>Today</item>
        <item>Past 7 days</item>
        <item>Past 30 days</item>
    </string-array>

</resources>