<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="?attr/colorSurfaceContainer"
        app:strokeWidth="0dp"
        android:clipToPadding="false"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_add_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:fontFamily="@font/robotorbold"
                android:text="@string/add_task"
                android:textColor="?attr/colorOnSurface"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:paddingHorizontal="16dp"
                android:hint="Title"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_task_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnSurface"
                    android:textColorHint="?attr/colorOnSurfaceVariant"
                    android:padding="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:paddingHorizontal="16dp"
                android:layout_marginBottom="16dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_task_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnSurface"
                    android:textColorHint="?attr/colorOnSurfaceVariant"
                    android:padding="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_add_task_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical|start">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_tag"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/tag"
                    android:gravity="center"
                    android:padding="12dp"
                    app:backgroundTint="?attr/colorSurfaceContainerLowest"
                    app:icon="@drawable/ic_tag"
                    app:iconSize="24dp"
                    app:iconTint="?attr/colorOnSecondaryContainer"
                    app:layout_constraintStart_toEndOf="@+id/btn_timer"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_timer"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/timer"
                    android:gravity="center"
                    android:padding="12dp"
                    app:backgroundTint="?attr/colorSurfaceContainerLowest"
                    app:icon="@drawable/ic_timer"
                    app:iconSize="24dp"
                    app:iconTint="?attr/colorOnSecondaryContainer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_flag"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/flag"
                    android:gravity="center"
                    android:padding="12dp"
                    app:backgroundTint="?attr/colorSurfaceContainerLowest"
                    app:icon="@drawable/ic_flag"
                    app:iconSize="24dp"
                    app:iconTint="?attr/colorOnSecondaryContainer"
                    app:layout_constraintStart_toEndOf="@+id/btn_tag"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_send_task"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/send"
                    android:gravity="center"
                    android:padding="12dp"
                    app:backgroundTint="@android:color/transparent"
                    app:icon="@drawable/ic_send"
                    app:iconSize="24dp"
                    app:iconTint="?attr/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </com.google.android.material.button.MaterialButton>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2"
                android:padding="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toStartOf="@+id/btn_edit"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_edit"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Edit"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/add_task_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</FrameLayout>
